--- a/package.json
+++ b/package.json
@@ -7,33 +7,7 @@
     "bee-queue": "^1.3.1",
     "bull": "^3.22.4",
     "kue": "^0.11.6",
-    "p-finally": "^1.0.0",
-    "promise-callbacks": "^3.8.1",
-    "redis": "^2.7.1"
-  },
-  "devDependencies": {
-    "@commitlint/cli": "^11.0.0",
-    "@commitlint/config-conventional": "^11.0.0",
-    "@semantic-release/changelog": "^5.0.1",
-    "@semantic-release/commit-analyzer": "^8.0.1",
-    "@semantic-release/exec": "^5.0.0",
-    "@semantic-release/git": "^9.0.0",
-    "@semantic-release/github": "^7.1.1",
-    "@semantic-release/npm": "^7.0.6",
-    "@semantic-release/release-notes-generator": "^9.0.1",
-    "ava": "^0.25.0",
-    "ava-spec": "^1.1.0",
-    "conventional-changelog-conventionalcommits": "^4.4.0",
-    "eslint": "^7.8.1",
-    "eslint-config-prettier": "^6.10.1",
-    "eslint-plugin-prettier": "^3.1.2",
-    "lolex": "^6.0.0",
-    "nyc": "^15.0.1",
-    "prettier": "^2.0.4",
-    "sandboxed-module": "^2.0.3",
-    "semantic-release": "^17.2.2",
-    "semver": "^7.2.1",
-    "sinon": "^7.5.0"
+    "pg-boss": "^5.2.3"
   },
   "files": [
     "HISTORY.md",
@@ -45,14 +19,7 @@
     "lib"
   ],
   "scripts": {
-    "ci": "if node -e '({...0})' 2>/dev/null && node -e '\"\".trimEnd()' 2>/dev/null; then npm run lint && npm run ci:coverage && if [ -z \"$CI\" ]; then npm run ci:commitlint; fi; else ava; fi",
-    "ci:commitlint": "if node -e 'async()=>{for await(var a of a);}'; then commitlint --from \"origin/${GITHUB_BASE_REF:-master}\"; fi",
-    "ci:coverage": "if [ -z \"$CI\" ]; then npm run coverage; else npm run coverage-and-report; fi",
-    "coverage-and-report": "npm run coverage && mkdir -p coverage && nyc report --reporter=text-lcov > coverage/lcov.info",
-    "coverage": "nyc ava",
-    "lint": "eslint . && prettier --check '**/*.(html|json|md|sublime-project|ts|yml)'",
-    "report": "npm run coverage && nyc report --reporter=html",
-    "test": "npm run lint && ava"
+    "start": "./benchmark/aws-benchmark.sh"
   },
   "keywords": [
     "task",
