--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "bee-queue": "^1.3.1",
     "bull": "^3.22.4",
     "kue": "^0.11.6",
-    "pg-boss": "^5.2.3"
+    "pg-boss": "^5.2.3",
+    "simple-json-db": "^1.2.3"
   },
   "files": [
     "HISTORY.md",
